# binfiles

./: .gitignore  .zshrc  README.md  append  backup.sh  bluetooth  cnet  cnetwork  cnetwork_old  cstrap  dualDisplay  dual_display.sh  ff  findfile  git-alpha  gitalias  gitsave  install.sh  killapp  killdis  makefolderExecutable  makehere  makezip  mountsd  msd  mv2  rmbin  runasm  runc  runcc  runcpp  runmain  runmain.c++  runpy  runrs  runrust  savegit  savegit+  setHdmi  test  (+4 more)
.completions/: _bin_completions.sh  gitalias-completion.sh
.github/workflows/: c-cpp.yml
.src/: .clangd  Makefile  cli  cnet.c  defines.h  dualDisplay.c  dual_display.c  dualdisplay.c  error.format  ff.c  findfile.c  gitalias  gitalias.c  gitsave.c  makeall.sh  makefile  makefolderExecutable  makehere.cpp  msd.c  mv2.c  runasm.c  runc.c  runcpp.c  runfile.c++  runmain.c++  runmain.cpp  runpy.c  runrs.c  setHdmi.c  umsd.c
.src/c/: binHeaders.c  binHeaders.h  binHeaders.h.gch  error.format  gitsave.c  gitsave.cpp  makefile  msd.c  runc.c  runcpp.c  runpy.c  runrs.c  umsd.c
.src/gitalias/: .clangd  Main.cxx  defines.h  includes.h
.src/gitalias_boost/: CMakeLists.txt  Main.cxx  gitalias  grab.sh  makefile  test  test.cpp  test.cxx
.srccodes/bash/: makehere
.srccodes/c/: binHeaders.c  findfile.c  makefile  runasm.c  runcpp.c  test.c
bash_code/: cpom  findfile_old  insPacages  mountsd_old  runc_old  runcpp_old  savegit_old  test.sh
c_code/: a.out  binHeaders.c  binHeaders.h  binHeaders.h.gch  cnetwork.c  dothis.cpp  findfile.c  killapp.c  makefile  mountsd.c  msd.c  runasm.c  runc.c  runcpp.c  savegit+.c  savegit.c  savegit.cpp  testsave.cpp  umountsd.c  umsd.c
code/: binHeaders.c  binHeaders.h  cnetwork.c  runc.c  umountsd.c
src/: .gdb_history  CMakeLists.txt  Makefile  README.md  _msd.cxx  defines.h  gitalias.cxx  makeall.sh  makehere.cpp  makehere.cxx  msd.c  msd.cxx  runmain.cpp  setHdmi.c  setHdmi.cxx  setHdmi.cxx.backup  umsd.c
src/cstrap/: CMakeLists.txt  Makefile  cstrap.cpp  cstrap.cxx
src/engine/: engine.hpp  todo.md
src/gitalias/: CMakeLists.txt  Main.cxx  gitalias.1  gitalias.cxx
src/makehere/: CMakeLists.txt
src/makezip/: .Makefile  CMakeLists.txt  Makefile  Makezip  Makezip.cpp  Makezip.h  Makezip.hpp  defines.h  errormessage.cpp  errormessage.h  errormessage.hpp  includes.hpp  main.cpp  makezip.1  zip.cpp  zip.h  zip.hpp
src/msd/: CMakeLists.txt  msd.cxx
src/setHdmi/: Makefile  setHdmi.cxx
src/underDevelopment/: Todo.md  _msd.cxx  a.out  engine.hpp  mainzip.cpp  runasm.c  runmain.cpp  setHdmi.cxx  setHdmi.cxx.backup
