cmake_minimum_required(VERSION 3.25)
project(gitalias)
add_executable(${PROJECT_NAME} Main.cxx)
add_compile_options( -g -Werror -std=c++17 -w )
target_link_libraries(${PROJECT_NAME} boost_program_options)
set( CMAKE_CXX_STANDARD 14 )
set( CMAKE_BINARY_DIR ${CMAKE_SOURCE_DIR}/bin )
set( EXECUTABLE_OUTPUT_PATH ${CMAKE_BINARY_DIR} )
if(MSVC)
add_compile_options( -g -std=c++14 )
endif()
